--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,137 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-color: #02b192;
+  --secondary-color: #20a203;
+  --accent-color: #bffef3;
+  --gray-color: #bfc3cc;
+  --text-color: #333;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  color: var(--text-color);
+}
+
+i {
+  color: #fff;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #fff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 20px;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.bg {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.hero-headline {
+  color: var(--primary-color);
+  font-size: 4rem;
+  margin-bottom: 20px;
+  animation: appear ease 1s forwards;
+  opacity: 0;
+}
+
+.green {
+  color: var(--primary-color);
+  font-weight: bold;
+}
+
+.hero-desc {
+  margin-bottom: 20px;
+  font-size: 1.1rem;
+  animation: appear ease 1s forwards;
+  animation-delay: 800ms;
+  opacity: 0;
+}
+
+.search {
+  position: relative;
+  width: 300px;
+  animation: appear ease 1s forwards;
+  animation-delay: 1.6s;
+  opacity: 0;
+}
+
+.search-icon {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  padding-left: 10px;
+  transition: color ease 200ms;
+}
+
+.search-icon i {
+  color: var(--gray-color);
+}
+
+.search-bar {
+  padding: 10px 30px;
+  border-radius: 20px;
+  border: 2px solid var(--gray-color);
+  width: 100%;
+  caret-color: var(--primary-color);
+}
+
+.search-bar:focus {
+  outline-color: var(--primary-color);
+}
+
+.search-bar:focus + .search-icon {
+  color: var(--primary-color);
+}
+
+.search-btn {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: var(--primary-color);
+  border: none;
+  outline: none;
+  height: 100%;
+  padding: 0 20px 0 20px;
+  color: #fff;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  cursor: pointer;
+}
+
+.search-btn:hover {
+  filter: brightness(1.2);
+}
+.search-btn:focus-visible {
+  filter: brightness(1.2);
+}
+
+.search-btn:active {
+  filter: brightness(1);
 }
