sign in google a upravy

--- a/app/globals.css
+++ b/app/globals.css
@@ -127,18 +127,10 @@ svg {
   transition: all ease 150ms;
 }
 
-.google:hover > svg {
-  fill: #c71510;
-}
-
-.facebook:hover > svg {
-  fill: #455ea9;
-}
-
-.apple:hover > svg {
-  fill: #515357;
-}
-
 .input:focus-within + svg {
   fill: #02b192;
+}
+
+.google:hover svg {
+  fill: #c71510;
 }
